python/lists/List Stores Variable.txt

C:\Users\tester\Desktop\practice\python\lists
λ python
Python 2.7.17 (v2.7.17:c2f86d86e6, Oct 19 2019, 21:01:17) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> l = [1,2,3]
>>> l.append('Append Me! ')
>>> l
[1, 2, 3, 'Append Me! ']
>>> l.pop()
'Append Me! '
>>> l
[1, 2, 3]
>>> x = l.pop(2)
>>> x
3
>>> l
[1, 2]
>>> new_list = ['a','b','c','d','e']
>>> new_list
['a', 'b', 'c', 'd', 'e']
>>> new_list.reverse()
>>> new_list
['e', 'd', 'c', 'b', 'a']
>>> new_list.reverse()
>>> new_list
['a', 'b', 'c', 'd', 'e']
>>> new_list.reverse() new_list
  File "<stdin>", line 1
    new_list.reverse() new_list
                              ^
SyntaxError: invalid syntax
>>> new_list.reverse()
>>> new_list
['e', 'd', 'c', 'b', 'a']
>>> new_list.reverse()
>>> new_list
['a', 'b', 'c', 'd', 'e']
>>> new_list.reverse()
>>> new_list
['e', 'd', 'c', 'b', 'a']
>>> new_list.sort()
>>> new_list
['a', 'b', 'c', 'd', 'e']
>>> new_list.sort()
>>> new_list
['a', 'b', 'c', 'd', 'e']
>>> l_1 = [1,2,3]
>>> l_2 = [4,5,6]
>>> l_3 = [7,8,9]
>>> mattrice = [ l_1 + l_2 + l_3 ]
>>> mattrice
[[1, 2, 3, 4, 5, 6, 7, 8, 9]]
>>> mattrice = [ l_1 , l_2 , l_3 ]
>>> mattrice
[[1, 2, 3], [4, 5, 6], [7, 8, 9]]
>>> mattrice[0]
[1, 2, 3]
>>> mattrice[0][1]
2
>>> mattrice[0][3]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> mattrice[0][2]
3
>>> mattrice[0][3][2]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> mattrice[0][3]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> mattrice[1]
[4, 5, 6]
>>> mattrice[1][-1]
6
>>> mattrice[1][1]
5
>>> mattrice[1],[1]
([4, 5, 6], [1])
>>> mattrice[1],[1]
([4, 5, 6], [1])
>>> mattrice[1]+[1]
[4, 5, 6, 1]
>>> mattrice[1][1]
5
>>> mattrice[1]
[4, 5, 6]
>>>  